--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Content/Site.css
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Content/Site.css
@@ -1,12 +1,21 @@
 ﻿body {
+    background-image: url('@Url.Content("~/Content/Images/content_bg.png")');
     padding-top: 50px;
     padding-bottom: 20px;
 }
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+    position: fixed;
+    top: 205px;
+    bottom: 20px;
+    width: 100%;
+    /*top: 205px;*/
+    /*padding-top: 175px;*/
+    padding-left: 20px;
+    padding-right: 0px;
+    z-index: 20;
+    overflow-y: auto;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
@@ -16,6 +25,51 @@
     white-space: normal;
 }
 
+.pageheader {
+    position: fixed;
+    top: 0px;
+    height: 170px;
+    width: 100%;
+    background-color: white;
+    z-index: 900;
+}
+.pageheaderleft {
+    position: fixed;
+    top: 0px;
+    left: 5px;
+    /*width:49%;*/
+    float: left;
+    z-index: 990;
+}
+.pageheaderright {
+    position: fixed;
+    top: 12px;
+    right: 5px;
+    /*width: 49%;*/
+    float: right;
+    z-index: 990;
+}
+
+.colwidth-xsm {
+    width: 8%;
+}
+.colwidth-sm {
+    width: 16%;
+}
+.colwidth-med {
+    width: 25%;
+}
+.colwidth-lg {
+    width: 32%;
+}
+.colwidth-xlg {
+    width: 45%;
+}
+.colbold {
+    font-weight: bold;
+}
+
+
 /* Set width on the form input elements since they're 100% wide by default */
 input,
 select,
@@ -23,4 +77,57 @@ textarea {
     max-width: 280px;
 }
 
+.webGrid {
+    width: 500px;
+}
 
+.webGrid2 {
+    width: 650px;
+}
+
+.webGrid2 {
+    width: 850px;
+}
+
+.webGrid, .webGrid2, webGrid3 {
+    margin: 4px;
+    border-collapse: collapse;
+    background-color: #e0e9e8;
+}
+    
+.header {
+    background-color: #004844;
+    font-weight: bold;
+    color: #C1C405;
+}
+
+.webGrid th, .webGrid td, .webGrid2 th, .webGrid2 td {
+    border: 1px solid #7fa3a1;
+    padding: 2px;
+}
+
+.alt {
+    background-color: ghostwhite;
+    color: #000;
+}
+
+.gridHead a:hover {
+    text-decoration: underline;
+}
+
+.description {
+    width: auto
+}
+
+.select {
+    background-color: #C1C405;
+    color: #004844;
+}
+
+.testFail {
+    color: darkred;
+}
+
+.testSuccess {
+    color: forestgreen;
+}
