--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Site.Master
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Site.Master
@@ -6,7 +6,7 @@
 <head runat="server">
     <title></title>
     <link rel="stylesheet" href="Site.css" type="text/css" />
-    <script type="text/javascript" src="JavaScript/ScrollingGrids.js"></script>
+    <script src="JavaScript/ScrollingGrids.js" type="text/javascript"></script>
 </head>
 <body>
     <form id="form1" runat="server">
