--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Site.Master
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Site.Master
@@ -7,6 +7,7 @@
     <title></title>
     <link rel="stylesheet" href="Site.css" type="text/css" />
     <script src="JavaScript/ScrollingGrids.js" type="text/javascript"></script>
+    <meta name="format-detection" content="telephone=no">
 </head>
 <body>
     <form id="form1" runat="server">
