Don't consider stats as improved unless they differ by more than a threshold (1%).

--- a/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Site.css
+++ b/APSIM.PerformanceTests.Portal/APSIM.PerformanceTests.Portal/Site.css
@@ -293,6 +293,9 @@
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 13px;
 }
+.PR_Message {
+    margin-left: 30px;
+}
 .PR_TopRow {
     border-top: 2px solid black;
     border-bottom: 1px solid black;
