Change migrate code. Changed upload api to overwrite existing PR if necessary.

--- a/APSIM.POStats.Portal/Pages/Error.cshtml
+++ b/APSIM.POStats.Portal/Pages/Error.cshtml
@@ -9,7 +9,10 @@
 @if (Model.ShowRequestId)
 {
     <p>
-        <strong>@Model.ExceptionMessage</strong>
+        <strong>@Model.ExceptionThrown.Message</strong>
+    </p>
+    <p>
+        @Model.ExceptionThrown.ToString()
     </p>
 }
 
