Accept stats now works as do graphs on production web site.

--- a/APSIM.POStats.Portal/Pages/Heatmap.cshtml
+++ b/APSIM.POStats.Portal/Pages/Heatmap.cshtml
@@ -13,7 +13,7 @@
     var data;
     function drawChart() {
         var jsonData = $.ajax({
-                url: "/Heatmap?handler=ChartData&id=@Model.PullRequest.Id",
+                url: location.pathname + "?handler=ChartData&id=@Model.PullRequest.Id",
                 dataType: "json",
                 async: false
         }).responseText;
