--- a/APSIM.POStats.Portal/Pages/Accept.cshtml
+++ b/APSIM.POStats.Portal/Pages/Accept.cshtml
@@ -3,11 +3,21 @@
 @{
     ViewData["Title"] = "Accept stats?";
 
-    <p>If you want to accept the stats for pull request #@Model.PullRequestId please enter the admin password below.</p>
+    <p>If you want to accept the stats for pull request #@Model.PullRequestNumber please enter the admin password below.</p>
     <form method="post">
-        <div>
-            <label for="Password">Password:</label>
-            <input type="password" name="Password" value="" />
-        </div>
+        <fieldset>
+            <div>
+                <label>Pull request Number:</label>
+                <input name="PullRequestNumber" value="@Model.PullRequestNumber" readonly/>
+            </div>
+            <div>
+                <label for="Password">Password:</label>
+                <input type="password" name="Password" value="" />
+            </div>
+            <div>
+                <label>&nbsp;</label>
+                <input type="submit" value="Submit" class="submit" />
+            </div>
+        </fieldset>
     </form>
 }
