Added Update Stats button

--- a/APSIM.POStats.Portal/Pages/Index.cshtml
+++ b/APSIM.POStats.Portal/Pages/Index.cshtml
@@ -71,6 +71,10 @@
                 <label for="DateCreated">Date created:</label>
                 <input name="DateCreated" value="@Model.PullRequest.DateRun" readonly />
             </div>
+            <div>
+                <label for="AcceptedPullRequestNumber">Accepted pull request number:</label>
+                <input name="AcceptedPullRequestNumber" value="@Model.PullRequest.AcceptedPullRequest.Number" readonly />
+            </div>
             <br />
             <br />
             <div>
