--- a/APSIM.POStats.Portal/Pages/Shared/_Layout.cshtml
+++ b/APSIM.POStats.Portal/Pages/Shared/_Layout.cshtml
@@ -25,7 +25,10 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Heatmap" asp-route-id=@ViewData["ID"]>Heatmap</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Accept" asp-route-id=@ViewData["ID"]>Accept</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Accept" asp-route-id=@ViewData["ID"]>Accept stats</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-page="/UpdateAccepted" asp-route-id=@ViewData["ID"]>Update stats</a>
                         </li>
                     </ul>
                 </div>
